# kinova_grasp

./: .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  README2.md  docker_build.sh
.devcontainer/: devcontainer.json
cyclonedds/: config.xml
docker_run/: docker_run.sh  run_isaac_sim.sh  run_kinova_grasp.sh  run_kinova_images.sh  run_kinova_isaac.sh  run_kinova_mtc.sh  run_kinova_ops.sh  run_kinova_python.sh  run_kinova_vision.sh  run_py_pubsub_talker.sh  run_robot.sh  run_rviz.sh  run_stack.sh
entrypoint_scripts/: entrypoint.sh  entrypoint_isaac_sim.sh  entrypoint_kinova_grasp.sh  entrypoint_kinova_images.sh  entrypoint_kinova_isaac.sh  entrypoint_kinova_mtc.sh  entrypoint_kinova_ops.sh  entrypoint_kinova_python.sh  entrypoint_kinova_vision.sh  entrypoint_kortex.sh  entrypoint_kortex_vision.sh  entrypoint_py_pubsub.sh  entrypoint_robot.sh  entrypoint_rviz.sh  set_param.sh
image_transfer/: depth_registered_image.npy
overlay_ws/src/kinova_images/: config.rviz  package.xml  setup.cfg  setup.py
overlay_ws/src/kinova_mtc/: CMakeLists.txt  package.xml
overlay_ws/src/kinova_python/: CMakeLists.txt  package.xml
overlay_ws/src/kinova_python/config/: gen3.srdf  kinova_python.yaml  moveit_mtc.rviz  ompl_planning.yaml  sensors_3d.yaml
overlay_ws/src/kinova_python/launch/: kinova_grasp.launch.py  kinova_grasp_old.launch.py  kinova_isaac.launch.py  kinova_isaac_new.launch.py  kinova_python.launch.py
overlay_ws/src/kinova_python/scripts/: kinova_grasp.py  kinova_grasp_old.py  kinova_ops.py  kinova_ops2.py  kinova_ops_combined.py  kinova_python.py
(+42 files in other folders)
